[package]
name = "endlessh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
fastrand = "1.9"
tokio = { version = "1.26", features = ["macros", "net", "rt", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
